--- a/faq_wifi_modem.html
+++ b/faq_wifi_modem.html
@@ -135,7 +135,7 @@
                 </a>
                 <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#5324e0]" href="menu_bantuan.html">
                     <div class="text-[#5324e0] flex h-8 items-center justify-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 256 256"><path d="M140,180a12,12,0,1,1-12-12A12,12,0,0,1,140,180ZM128,72c-22,0-40,16.8-40,37.5,0,13.1,7.9,23.4,19.5,30.5A40.7,40.7,0,0,0,120,152a8,8,0,0,0,16,0,24.5,24.5,0,0,1-11.8-8.8c-8.3-5.1-12.2-11.6-12.2-20.7,0-11.9,10.8-21.5,24-21.5s24,9.6,24,21.5a8,8,0,0,0,16,0C168,88.8,150,72,128,72Zm104,56A104,104,0,1,1,128,24,104.11,104.11,0,0,1,232,128Zm-16,0a88,88,0,1,0-88,88A88.1,88.1,0,0,0,216,128Z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Z"></path><path d="M128,72c-22.1,0-40,17.9-40,40a8,8,0,0,0,16,0c0-13.2,10.8-24,24-24s24,10.8,24,24c0,13.2-10.8,24-24,24a8,8,0,0,0-8,8v8a8,8,0,0,0,16,0v-1.1c19.6-4.3,32-21.7,32-40.9C168,89.9,150.1,72,128,72Z"></path><circle cx="128" cy="180" r="12"></circle></svg>
                     </div>
                     <p class="text-[#5324e0] text-xs font-medium leading-normal tracking-[0.015em]">Bantuan</p>
                 </a>
