--- a/faq_wifi_modem.html
+++ b/faq_wifi_modem.html
@@ -145,11 +145,11 @@
                     </div>
                     <p class="text-slate-400 dark:text-slate-500 text-xs font-medium leading-normal tracking-[0.015em]">Riwayat</p>
                 </a>
-                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#5324e0]" href="menu_bantuan.html">
-                    <div class="text-[#5324e0] flex h-8 items-center justify-center">
+                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-primary" href="menu_bantuan.html">
+                    <div class="text-primary flex h-8 items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Z"></path><path d="M128,72c-22.1,0-40,17.9-40,40a8,8,0,0,0,16,0c0-13.2,10.8-24,24-24s24,10.8,24,24c0,13.2-10.8,24-24,24a8,8,0,0,0-8,8v8a8,8,0,0,0,16,0v-1.1c19.6-4.3,32-21.7,32-40.9C168,89.9,150.1,72,128,72Z"></path><circle cx="128" cy="180" r="12"></circle></svg>
                     </div>
-                    <p class="text-[#5324e0] text-xs font-medium leading-normal tracking-[0.015em]">Bantuan</p>
+                    <p class="text-primary text-xs font-medium leading-normal tracking-[0.015em]">Bantuan</p>
                 </a>
                 <a class="flex flex-1 flex-col items-center justify-end gap-1 text-slate-400 dark:text-slate-500" href="pelanggan_profile.html">
                     <div class="text-slate-400 dark:text-slate-500 flex h-8 items-center justify-center">
